# guile-jpeg

./: .gitignore  ChangeLog  HACKING  LICENSE  Makefile.am  NEWS  README  configure.ac  env.in  jpeg.scm
examples/: crop-jpeg.scm  split-jpeg.scm  transpose-jpeg.scm
jpeg/: array.scm  bit-ports.scm  dct.scm  exif.scm  huffman.scm  jfif.scm  pixbufs.scm  transform.scm
tests/: basic.scm  parse.scm
